{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 176,
  "lineage": "fa5ec85c-c9cc-09b7-035a-b8e0b8cdbb50",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/cc99f4153be778c9",
            "arn_suffix": "app/ACS-ext-alb/cc99f4153be778c9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ACS-ext-alb-1131964746.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/cc99f4153be778c9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ACS-ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-013cbc40e51c55c8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03081dc7285feac78"
              },
              {
                "subnet_id": "subnet-0328d3015dc178e01"
              }
            ],
            "subnets": [
              "subnet-03081dc7285feac78",
              "subnet-0328d3015dc178e01"
            ],
            "tags": {
              "Name": "ACS-ext-alb"
            },
            "tags_all": {
              "Name": "ACS-ext-alb"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/11b87e7a0800746b",
            "arn_suffix": "app/ialb/11b87e7a0800746b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-316689794.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/11b87e7a0800746b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0196c69eda4717a54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b1a1963b70f2a2ed"
              },
              {
                "subnet_id": "subnet-0b573736f5530a003"
              }
            ],
            "subnets": [
              "subnet-0b1a1963b70f2a2ed",
              "subnet-0b573736f5530a003"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ACS-ext-alb/cc99f4153be778c9/9afd0de8856b29e2",
            "certificate_arn": "arn:aws:acm:us-east-1:847322602513:certificate/ba37638f-60e9-443a-8e8e-b8c74bc75d34",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/4021b68390652dec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ACS-ext-alb/cc99f4153be778c9/9afd0de8856b29e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/cc99f4153be778c9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/11b87e7a0800746b/ceafc8659f7c4beb",
            "certificate_arn": "arn:aws:acm:us-east-1:847322602513:certificate/ba37638f-60e9-443a-8e8e-b8c74bc75d34",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/33bd1f43fa1d85c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/11b87e7a0800746b/ceafc8659f7c4beb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/11b87e7a0800746b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/4780ad76559393b4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener-rule/app/ialb/11b87e7a0800746b/ceafc8659f7c4beb/885a6784b1afaca1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.lamislick.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener-rule/app/ialb/11b87e7a0800746b/ceafc8659f7c4beb/885a6784b1afaca1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/11b87e7a0800746b/ceafc8659f7c4beb",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/4021b68390652dec",
            "arn_suffix": "targetgroup/nginx-tgt/4021b68390652dec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/4021b68390652dec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/4780ad76559393b4",
            "arn_suffix": "targetgroup/opeyemi-tooling-tgt/4780ad76559393b4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/4780ad76559393b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "opeyemi-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/33bd1f43fa1d85c2",
            "arn_suffix": "targetgroup/wordpress-tgt/33bd1f43fa1d85c2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/33bd1f43fa1d85c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0148ffb4ef98c9b45",
            "domain": "vpc",
            "id": "eipalloc-0148ffb4ef98c9b45",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-249-84.compute-1.amazonaws.com",
            "public_ip": "34.235.249.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP-true"
            },
            "tags_all": {
              "Name": "ACS-EIP-true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:internet-gateway/igw-0254ac7e289e01c4d",
            "id": "igw-0254ac7e289e01c4d",
            "owner_id": "847322602513",
            "tags": {
              "Name": "ACS-vpc-0604f8b4ac2e1dce7-IG!"
            },
            "tags_all": {
              "Name": "ACS-vpc-0604f8b4ac2e1dce7-IG!"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0148ffb4ef98c9b45",
            "connectivity_type": "public",
            "id": "nat-027eb39136caf8796",
            "network_interface_id": "eni-0a644f40aaaa9f0a7",
            "private_ip": "10.0.2.216",
            "public_ip": "34.235.249.84",
            "subnet_id": "subnet-03081dc7285feac78",
            "tags": {
              "Name": "ACS-Nat-true"
            },
            "tags_all": {
              "Name": "ACS-Nat-true"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b30ff590575c794f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027eb39136caf8796",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b30ff590575c794f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_nat_gateway.nat",
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0254ac7e289e01c4d",
            "id": "r-rtb-0cb13928dbf9f85f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb13928dbf9f85f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:route-table/rtb-0b30ff590575c794f",
            "id": "rtb-0b30ff590575c794f",
            "owner_id": "847322602513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:route-table/rtb-0cb13928dbf9f85f9",
            "id": "rtb-0cb13928dbf9f85f9",
            "owner_id": "847322602513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02726e04d97c72aa3",
            "route_table_id": "rtb-0b30ff590575c794f",
            "subnet_id": "subnet-0b573736f5530a003"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd3b7a9c9bc196e9",
            "route_table_id": "rtb-0b30ff590575c794f",
            "subnet_id": "subnet-0b1a1963b70f2a2ed"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09164f49a384ac8f3",
            "route_table_id": "rtb-0b30ff590575c794f",
            "subnet_id": "subnet-0bce0a4636fc37c0f"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05135da8bb711b7d2",
            "route_table_id": "rtb-0b30ff590575c794f",
            "subnet_id": "subnet-044a707c91459d367"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d43d8018e58ecf2d",
            "route_table_id": "rtb-0cb13928dbf9f85f9",
            "subnet_id": "subnet-03081dc7285feac78"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0417f6cda7e57ec82",
            "route_table_id": "rtb-0cb13928dbf9f85f9",
            "subnet_id": "subnet-0328d3015dc178e01"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0b573736f5530a003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b573736f5530a003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0b1a1963b70f2a2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a1963b70f2a2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0bce0a4636fc37c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce0a4636fc37c0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-044a707c91459d367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a707c91459d367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-03081dc7285feac78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03081dc7285feac78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-0"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0328d3015dc178e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0328d3015dc178e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-1"
            },
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:vpc/vpc-0604f8b4ac2e1dce7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7ca83ba214dc1d8",
            "default_route_table_id": "rtb-066631a9abc1f3259",
            "default_security_group_id": "sg-002345934bd380ba9",
            "dhcp_options_id": "dopt-032bdd9b1a3ac5dd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0604f8b4ac2e1dce7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066631a9abc1f3259",
            "owner_id": "847322602513",
            "tags": {
              "Name": "ACS-VPC"
            },
            "tags_all": {
              "Name": "ACS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-063c663a4d7e5e9ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c663a4d7e5e9ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02060b0779e2fc39e",
            "private_dns": "ip-10-0-2-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.35",
            "public_dns": "ec2-44-205-19-40.compute-1.amazonaws.com",
            "public_ip": "44.205.19.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9059904545ebff3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03081dc7285feac78",
            "tags": {
              "Name": "ACS-Jenkins"
            },
            "tags_all": {
              "Name": "ACS-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013cbc40e51c55c8e"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-0da31e591cf8301ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da31e591cf8301ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0728b7b14f213dd33",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-44-204-196-174.compute-1.amazonaws.com",
            "public_ip": "44.204.196.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a06fc7a30216b144",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03081dc7285feac78",
            "tags": {
              "Name": "ACS-artifactory"
            },
            "tags_all": {
              "Name": "ACS-artifactory"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013cbc40e51c55c8e"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-00bc4d6943f6ea53b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bc4d6943f6ea53b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07df1b407a5dc8024",
            "private_dns": "ip-10-0-2-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.126",
            "public_dns": "ec2-3-239-238-13.compute-1.amazonaws.com",
            "public_ip": "3.239.238.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04853dfe53963da8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03081dc7285feac78",
            "tags": {
              "Name": "ACS-sonbarqube"
            },
            "tags_all": {
              "Name": "ACS-sonbarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013cbc40e51c55c8e"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0ba430d91e290da69",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba430d91e290da69",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-03cb296de27e058c8",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cb296de27e058c8",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-013cbc40e51c55c8e",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013cbc40e51c55c8e",
            "ingress": [],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0196c69eda4717a54",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0196c69eda4717a54",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0436036d1a5d29926",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0436036d1a5d29926",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-03831ed42d2cd2d33",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03831ed42d2cd2d33",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0604f8b4ac2e1dce7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2997065894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013cbc40e51c55c8e",
            "security_group_rule_id": "sgr-0bb92faeebe65a162",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2695549000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013cbc40e51c55c8e",
            "security_group_rule_id": "sgr-06012c1d254aea36c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4263470787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0436036d1a5d29926",
            "security_group_rule_id": "sgr-0ff5468c47d733e82",
            "self": false,
            "source_security_group_id": "sg-0ba430d91e290da69",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2700861550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0196c69eda4717a54",
            "security_group_rule_id": "sgr-0177e2d460638e3f0",
            "self": false,
            "source_security_group_id": "sg-0436036d1a5d29926",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4235087907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cb296de27e058c8",
            "security_group_rule_id": "sgr-0a7d7f4d18edac42d",
            "self": false,
            "source_security_group_id": "sg-0ba430d91e290da69",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2313773567",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cb296de27e058c8",
            "security_group_rule_id": "sgr-0f43a5c7594c7ab21",
            "self": false,
            "source_security_group_id": "sg-03831ed42d2cd2d33",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-439349621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cb296de27e058c8",
            "security_group_rule_id": "sgr-0f3ea381b0e3c01e8",
            "self": false,
            "source_security_group_id": "sg-03831ed42d2cd2d33",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2936960368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0436036d1a5d29926",
            "security_group_rule_id": "sgr-0c06ed5b5952468c6",
            "self": false,
            "source_security_group_id": "sg-013cbc40e51c55c8e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3245068784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba430d91e290da69",
            "security_group_rule_id": "sgr-0bc8d5a4087fea3b0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1238656795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03831ed42d2cd2d33",
            "security_group_rule_id": "sgr-05082569a7e9ccf1a",
            "self": false,
            "source_security_group_id": "sg-0196c69eda4717a54",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-152970738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03831ed42d2cd2d33",
            "security_group_rule_id": "sgr-0d5b8198d536375c2",
            "self": false,
            "source_security_group_id": "sg-0ba430d91e290da69",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    }
  ]
}